ULS headings font and spacing fixes
Adjusting typographic properties to avoid them to be overriden when
the ULS is integrated in a different project

--- a/resources/css/ext.uls.css
+++ b/resources/css/ext.uls.css
@@ -31,14 +31,17 @@
 }
 .uls-menu h1 {
 	font-weight: normal;
-	padding-top: 12px;
+	padding-top: 1.25em;
 	border: none;
 	padding-bottom: 3px;
-	font-size: 21pt;
+	font-size: 18pt;
+	line-height: 1.25em;
 	padding-left: 15px;
 	color: #777;
 }
 .uls-menu h2 {
+	font-size: 16pt;
+	line-height: 1.5em;
 	padding-left: 6px;
 	margin-top: 0px;
 	margin-bottom: 15px;
@@ -46,9 +49,11 @@
 	color: #777;
 }
 .uls-menu h3 {
+	font-size: 14pt;
+	line-height: 1.5em;
 	padding-left: 0px;
 	margin-top: 0px;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	border-bottom: none;
 }
 .uls-worldmap {
